[package]
name = "crypto_exchange_path_finder"
version = "0.2.0"
authors = ["S74nk0 <krsticch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rayon = "1.3.0"
crypto_exchange_types = {path = "../crypto_exchange_types"}
crypto_serializer = {path = "../crypto_serializer"}
serde = { version = "1.0.106", features = ["derive"] }
