[package]
name = "crypto_exchange_types"
version = "0.1.0"
authors = ["S74nk0 <krsticch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.39"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
string_to_int_mapper = {path = "../string_to_int_mapper"}

[dev-dependencies]
proptest = "1.0.0"

# # not compiling inside the workspace
# [dependencies.wasm-bindgen]
# version = "^0.2"
# features = ["serde-serialize"]