[package]
name = "crypto_serializer"
version = "0.1.0"
authors = ["S74nk0 <krsticch@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
thiserror = "1.0.39"
bincode = "1.3.3" # try and compare serialization and deserialization speed
ciborium = "0.2.0"
lz4-compress = "0.1.1" # keep for legacy reasons or for WASM compatibility
# lz4 = "1.23.1" # make up mind what to use currently we use lzzzz # compare what the hell is different here
lzzzz = "1.0.4"

