[package]
name = "shm_mem_ipc"
version = "0.1.0"
authors = ["S74nk0 <krsticch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.106", features = ["derive"] }
crypto_serializer = {path = "../crypto_serializer"}
bytes = "0.5.4"
shared_memory = "0.10.0"
rand = "0.7.3"
ctrlc = "3.1.4"
indicatif = "0.14.0"