[package]
name = "jsonc_to_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", feature = "preserve_order"}
clap = { version = "4.1.13", features = ["derive"] }
anyhow = { version = "1.0", default-features = true }
json_comments = "0.2.1"